-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
Windows 7 (though affects all platforms)
-
3812af8ad0ff0b39451314fb93c4e0337cea078a
Raising and lowering a native widget doesn't raise and lower the associated platform window accordingly. The problem is in qwidget_qpa.cpp, QWidgetPrivate::raise_sys() and lower_sys(), where it only checks if widget is toplevel window.
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
| For Gerrit Dashboard: QTBUG-26344 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 29516,1 | Fix raising and lowering native widgets | master | qt/qtbase | Status: MERGED | +2 | 0 |